Fixed alignment issue on desktop

--- a/styles.css
+++ b/styles.css
@@ -77,25 +77,27 @@ h2, h4, h6 {
     margin-top:10px;
     margin-right:10px;
 }
-.container {
-    display:flex;
-    flex-wrap:nowrap;
-}
+
 .box-two {
     height: fit-content;
     margin-top:5px;
     margin-right:5px;
 }
+.two-boxes {
+    display:flex;
+    flex-wrap:nowrap;
+    justify-content: stretch;
+}
 .box-three {
     margin-left:5px;
     margin-top:5px;
-    width:fit-content;
-    height:fit-content;
+    flex-basis: content;
 }
 .box-four {
     margin-top:5px;
     margin-left:5px;
-    height:auto;
+    width: min-content;
+    flex: auto;
 }
 .section-title {
     text-align:center;
